tests/ok/loop-continue-borrow-release-merge.ari
fn inspect(value: ref i64) -> i64 {
  return 3;
}

fn main() -> i64 {
  var number = 7;
  let shared = ref number;
  var total = 0;
  var index = 0;

  while true {
    if index == 0 {
      total = total + inspect(shared);
      index = index + 1;
      continue;
    }
    break;
  }

  return total + number + index;
}

