tests/errors/loop-continue-borrow-state.ari
fn main() -> i64 {
  var first = 1;
  var second = 2;
  var holder: (ref i64, i64) = (ref first, 0);
  var index = 0;

  while true {
    if index == 0 {
      holder = (ref second, 1);
      index = index + 1;
      continue;
    }
    break;
  }

  return holder.1;
}
